--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,32 @@ android {
     }
     dexOptions {
         javaMaxHeapSize "4g"//增加启动速度
+        preDexLibraries = false
+        additionalParameters = ['--multi-dex', '--main-dex-list=' + project.rootDir.absolutePath + '/app/maindexlist.txt', '--minimal-main-dex',
+                                '--set-max-idx-number=30000']
     }
 }
+/*
+afterEvaluate {//gradle1.5时可以这样使用
+    tasks.matching {
+        it.name.startsWith('dex')
+    }.each { dx ->
+        def listMain = project.rootDir.absolutePath + '/app/maindexlist.txt'
+        if (dx.additionalParameters == null) {
+            dx.additionalParameters = []
+        }
+        //方法数越界时则生成多个dex文件
+        dx.additionalParameters += '--multi-dex'
 
+        //maindexlist.txt文件为主dex中的类型配置文件
+        dx.additionalParameters += '--main-dex-list=' + listMain
+
+        //-main-dex-list指定的所有class会打包到主dex中
+        dx.additionalParameters += '--minimal-main-dex'
+//        dx.additionalParameters = ['--set-max-idx-number=100']
+    }
+}
+*/
 dependencies {
     //下载，导包
     compile fileTree(include: ['*.jar'], dir: 'libs')
