--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.2'
+        //gradle-wrapper.properties 中的https\://services.gradle.org/distributions/gradle-2.14.1-all.zip对应 'com.android.tools.build:gradle:2.2.0'
+        classpath 'com.android.tools.build:gradle:2.2.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'//编译时注解
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
